syntax = "proto3";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "Cactus.Chat.Grpc";

package cactus.chat.grpc;

service ChatCallback {
  rpc Connect (ConnectParams) returns (stream Notification);
}

message ConnectParams{}

message Notification {
  oneof payload{
    UserConnected userConnected = 1;
    UserDisconnected userDisconnected = 2;

    ChatTitleChanged chatTitleChanged = 10;

    MessageNew messageNew = 20;
    MessageRead messageRead = 21;
    MessageDelivered messageDelivered = 22;

    ParticipantAdded participantAdded = 30;
    ParticipantLeft participantLeft = 31;
    ParticipantStartTyping participantStartTyping = 32;
    ParticipantStopTyping participantStopTyping = 33;

    Error error = 100;
  }
}

message UserConnected{
  string UserId = 1;
}

message UserDisconnected{
  string UserId = 1;
}

message ChatTitleChanged{
  string ChatId = 1;
  string UserId = 2;
  string Title = 3;
}

message MessageNew{
  string chatId = 1;
  InstantMessage Message = 2;
}

message MessageRead{
  string ChatId = 1;
  string UserId = 2;
  google.protobuf.Timestamp Timestamp = 3;
}

message MessageDelivered{
  string ChatId = 1;
  string UserId = 2;
  google.protobuf.Timestamp Timestamp = 3;
}

message ParticipantAdded{
  string ChatId = 1;
  string UserId = 2;
  string ParticipantId = 3;
  UserChatProfile Profile = 4;
}

message ParticipantLeft{
  string ChatId = 1;
  string UserId = 2;
}

message ParticipantStartTyping{
  string ChatId = 1;
  string UserId = 2;
}

message ParticipantStopTyping{
  string ChatId = 1;
  string UserId = 2;
}

message Error{
  int32 Code = 1;
  string Message = 2;
}

// ----- sub items
message InstantMessage
{
  google.protobuf.Timestamp Timestamp = 1;
  string Author = 2;
  string Message = 3;
  repeated Attachment Attachments = 20;
}

message Attachment{
  string Url = 1;
  string IconUrl = 2;
  string Name = 3;
  string Type = 4;
  int32 Size = 5;
}

message UserChatProfile{
  string Avatar = 1;
}

